# omniagis-lab

./: LICENSE  README.md  pyproject.toml
examples/: README.md  example_1_epsilon_robustness.py  example_2_return_time.py  example_3_fail_closed.py  example_4_mode_maverick.py  example_5_full_workflow.py
omniagis/: __init__.py  data_processor.py
src/omniagis/: __init__.py  __main__.py  cli.py  epsilon_sweep.py  exp_rt_runner.py  validatorgate_full.py
src/omniagis/audit/: __init__.py  bundle.py  cold_pass.py  inventory.py  parsability.py  scorecard.py
src/omniagis/core/: __init__.py  classifier.py  return_time.py  validator.py
tests/: test_bundle.py  test_cold_pass.py  test_epsilon_sweep.py  test_exp_rt_runner.py  test_integration.py  test_main.py  test_return_time.py  test_validator.py  test_validatorgate_full.py  test_validatorgate_pipeline.py
